--- a/css_files/styles.css
+++ b/css_files/styles.css
@@ -158,7 +158,7 @@ nav a p {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0;
-    height: 600px;
+    height: 500px;
     padding: 0rem 2rem;
 }
 
